<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_section_theme">

        <ListPreference
            app:key="@string/settings_theme_selection"
            app:title="@string/settings_theme_selection_title"
            app:defaultValue="@string/settings_system_default"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_section_storage">

        <Preference
            app:key="@string/settings_change_save_folder"
            app:title="@string/settings_saved_status_location"
            app:summary="@string/settings_default_folder_path" />

        <SwitchPreferenceCompat
            app:key="@string/settings_auto_save_toggle"
            app:title="@string/settings_save_all_statuses_toggle_title"
            app:summary="@string/settings_save_all_statuses_toggle_summary"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="@string/settings_save_older_toggle"
            app:title="@string/settings_save_older_status_toggle_title"
            app:summary="@string/settings_save_older_status_toggle_summary"
            app:defaultValue="false" />

        <Preference
            app:key="@string/settings_go_to_auto_saved"
            app:title="@string/settings_go_to_auto_saved" />

        <Preference
            app:key="@string/settings_clear_all_auto_saved"
            app:title="@string/settings_clear_all_auto_saved" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_section_app_info">

        <Preference
            app:key="@string/settings_privacy_policy"
            app:title="@string/settings_privacy_policy" />

        <Preference
            app:key="@string/settings_rate_us"
            app:title="@string/settings_rate_us" />

        <Preference
            app:key="@string/settings_share_app"
            app:title="@string/settings_share_app" />

        <Preference
            app:key="@string/settings_developer_info"
            app:title="@string/settings_developer_info" />

        <Preference
            app:key="@string/settings_app_version"
            app:title="@string/settings_app_version"
            app:summary="@string/settings_app_version_placeholder" />

    </PreferenceCategory>

</PreferenceScreen>
