<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_status">

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.kezor.localsave.savestatus.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" >
        <action
            android:id="@+id/action_status_to_mediaViewerFragment"
            app:destination="@id/mediaViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.kezor.localsave.savestatus.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" >
        <action
            android:id="@+id/action_saved_to_mediaViewerFragment"
            app:destination="@id/mediaViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kezor.localsave.savestatus.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/mediaViewerFragment"
        android:name="com.kezor.localsave.savestatus.MediaViewerFragment"
        android:label="MediaViewerFragment" >
        <argument
            android:name="mediaItem"
            app:argType="com.kezor.localsave.savestatus.MediaItem" />
        <argument
            android:name="isSavedMedia"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

</navigation>
